[package]
name = "ilo_hw_metrics"
version = "0.1.0"
authors = ["Peter Kuchar <peter.kuchar@konicaminolta.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
regex = "1"
lazy_static = { version = "1.4.0" }
ureq = { version = "*", features = ["json"] }
serde_json = { version = "*" }
serde = { version = "*" }
error-chain = { version = "*" }
clap = { version = "2.3.33" }
